# Monopoly

./: .gitignore  CMakeLists.txt  README.md  build_project_linux.sh  example_log_computer.txt  example_log_human.txt
.github/workflows/: build-test.yml
include/: Colors.h  Config.h  Normal_Space.h  Space.h  Space_Data.h
include/Game_manager/: Game_Manager.h  OstreamFork.h  OstreamFork.hpp  Reprint.h
include/Gameboard/: Gameboard.h
include/Player/: Bank.h  Computer_Player.h  Human_Player.h  Player.h  Position.h
include/Space/: Angular_Space.h  Normal_Space.h  Space.h  Space_Data.h  Start_Space.h
src/: Angular_Space.cpp  Normal_Space.cpp  Space.cpp  Start_Space.cpp  main.cpp
src/Game_manager/: Game_Manager.cpp  OstreamFork.cpp  OstreamFork.hpp  Reprint.cpp
src/Gameboard/: Gameboard.cpp
src/Player/: Bank.cpp  Computer_Player.cpp  Human_Player.cpp  Player.cpp
src/Space/: Angular_Space.cpp  Normal_Space.cpp  Space.cpp  Start_Space.cpp
